--- a/Readme.html
+++ b/Readme.html
@@ -1,4 +1,3 @@
 # Initial readme
 
-
-<iframe src="https://www.w3schools.com" title="W3Schools Free Online Web Tutorials">This is some ttext </iframe>
+![](./Test.svg)
