--- a/Readme.html
+++ b/Readme.html
@@ -1,3 +1,3 @@
 # Initial readme
 
-![](h./blob/ae2179d118af8cb2718ac708674f9d3fac7bac09/Test.svg)
+![](./blob/ae2179d118af8cb2718ac708674f9d3fac7bac09/Test.svg)
