--- a/Readme.html
+++ b/Readme.html
@@ -1,3 +1,9 @@
 # Initial readme
 
-![](./blob/ae2179d118af8cb2718ac708674f9d3fac7bac09/Test.svg)
+```mermaid
+graph TD;
+  A-->B;
+  B-->C;
+  A-->C;
+```
+  
